# sql-lens

./: .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  BENCHMARK.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  MILESTONE.md  PLUGIN.md  PRD.md  PROTOCOL.md  README.md  ROADMAP.md  SECURITY.md  SQL_Lens_PRD.md  STORAGE.md  TESTING.md  UI.md  sql-lens.example.toml
.github/workflows/: rust-ci.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/07-03-plan-core-domain-models/: implement.md  prd.md  task.json
.trellis/tasks/07-03-plan-next-sql-lens-milestone/: implement.md  task.json
.trellis/tasks/07-03-sql-lens-project-documentation-design/: design.md  task.json
.trellis/tasks/07-06-add-capture-pipeline-channel/: implement.md  prd.md  task.json
.trellis/tasks/07-06-add-http-server-foundation/: task.json
.trellis/tasks/07-06-add-live-statistics-counters/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-06-add-protocol-adapter-registry/: design.md  prd.md  task.json
.trellis/tasks/07-06-add-proxy-graceful-shutdown/: implement.md  task.json
.trellis/tasks/07-06-define-protocol-adapter-trait/: implement.md  prd.md  task.json
.trellis/tasks/07-06-implement-backend-dialing/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-06-implement-bidirectional-tcp-forwarding/: design.md  task.json
.trellis/tasks/07-06-implement-health-endpoint/: design.md  prd.md  task.json
.trellis/tasks/07-06-implement-in-memory-ring-buffer-append/: implement.md  prd.md  task.json
.trellis/tasks/07-06-implement-ring-buffer-event-lookup/: implement.md  prd.md  task.json
.trellis/tasks/07-06-implement-ring-buffer-timeline-query/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-06-implement-storage-filters/: task.json
.trellis/tasks/07-06-track-connection-lifecycle/: implement.md  prd.md  task.json
.trellis/tasks/07-07-add-mysql-packet-fixture-tests/: prd.md  task.json
.trellis/tasks/07-07-add-mysql-protocol-crate/: prd.md  task.json
.trellis/tasks/07-07-add-websocket-filters/: design.md  implement.md  task.json
.trellis/tasks/07-07-add-websocket-server-foundation/: design.md  (+3 more)
crates/sql-lens-api/: Cargo.toml  build.rs
crates/sql-lens-api/examples/: generate-openapi.rs
crates/sql-lens-api/src/: api_error.rs  api_state.rs  connections.rs  embedded_ui.rs  event_reader.rs  export.rs  health.rs  lib.rs  live_sql_events.rs  openapi.rs  protocols.rs  replay.rs  request_id.rs  server.rs  sql_events.rs  statistics.rs  test_support.rs  websocket.rs
crates/sql-lens-app/: Cargo.toml
crates/sql-lens-app/src/: lib.rs  main.rs  plugins.rs  retention.rs
crates/sql-lens-app/tests/: cli.rs  doris_live_docker.rs  mysql_live_docker.rs  starrocks_live_docker.rs  tidb_live_docker.rs
crates/sql-lens-app/tests/support/: mod.rs
crates/sql-lens-app/web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
crates/sql-lens-app/web/src/: App.tsx  main.tsx
crates/sql-lens-app/web/src/app/providers/: detail-drawer-provider.tsx  sidebar-provider.tsx  theme-provider.tsx
crates/sql-lens-app/web/src/app/routes/: connections.tsx  dashboard.tsx  replay.tsx  settings.tsx  sql-detail.tsx  sql-events.tsx  statistics.tsx
crates/sql-lens-app/web/src/app/routes/__tests__/: sql-events.test.tsx
crates/sql-lens-app/web/src/components/charts/: index.ts
crates/sql-lens-app/web/src/components/layout/: app-shell.tsx  detail-drawer.tsx  page-stub.tsx  sidebar-nav.tsx  sidebar.tsx  topbar.tsx
crates/sql-lens-app/web/src/components/sql/: parameter-table.tsx  sql-detail.tsx  sql-editor.tsx
crates/sql-lens-app/web/src/components/ui/: button.tsx  sonner.tsx
crates/sql-lens-app/web/src/features/connections/: ConnectionsPage.tsx  index.ts
crates/sql-lens-app/web/src/features/connections/components/: ConnectionFilters.tsx  ConnectionRow.tsx  ConnectionTable.tsx
crates/sql-lens-app/web/src/features/dashboard/: index.ts
crates/sql-lens-app/web/src/features/replay/: ReplayPage.tsx
crates/sql-lens-app/web/src/features/settings/: SettingsPage.tsx
crates/sql-lens-app/web/src/features/sql-events/: SqlDetailPage.tsx  index.ts
crates/sql-lens-app/web/src/features/sql-events/__tests__/: SqlDetailPage.test.tsx
crates/sql-lens-app/web/src/features/sql-events/components/: SqlConnectionInfo.tsx  SqlError.tsx  SqlMonacoViewer.tsx  SqlParameterTable.tsx  SqlReplaySection.tsx  SqlSummary.tsx
crates/sql-lens-app/web/src/features/sql-events/hooks/: useSqlEvent.ts
crates/sql-lens-app/web/src/features/statistics/: StatisticsPage.tsx
crates/sql-lens-app/web/src/lib/: monaco-config.ts  query-client.ts
crates/sql-lens-app/web/src/lib/api/: client.ts  config.ts  errors.ts  index.ts
crates/sql-lens-app/web/src/lib/api/__tests__/: client.test.ts  config.test.ts
crates/sql-lens-app/web/src/lib/api/hooks/: index.ts  use-connections.ts  use-health.ts  use-protocols.ts  use-replay.ts  use-sql-events.ts  use-statistics.ts
crates/sql-lens-app/web/src/lib/websocket/: index.ts  sql-stream.ts  url.ts  use-sql-stream.ts
crates/sql-lens-app/web/src/styles/: globals.css
crates/sql-lens-app/web/src/types/: index.ts
crates/sql-lens-capture/: Cargo.toml
crates/sql-lens-capture/src/: classifier.rs  lib.rs  pipeline.rs
crates/sql-lens-config/: Cargo.toml
crates/sql-lens-core/: Cargo.toml
crates/sql-lens-plugin/: Cargo.toml
crates/sql-lens-protocol/: Cargo.toml
crates/sql-lens-protocol-mysql/: Cargo.toml
crates/sql-lens-proxy/: Cargo.toml
crates/sql-lens-proxy/src/: dialer.rs  forwarding.rs  lib.rs  lifecycle.rs  listener.rs  shutdown.rs  tests.rs
crates/sql-lens-storage/: Cargo.toml
docs/openapi/: sql-lens.v1.yaml
scripts/: build-web.sh  release-binary.sh
(+584 files in other folders)
