[package]
name = "sql-lens-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "sql-lens"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sql-lens-config = { path = "../sql-lens-config" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
