[package]
name = "sql-lens-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sql-lens-config = { path = "../sql-lens-config" }
sql-lens-core = { path = "../sql-lens-core" }
tokio = { version = "1", features = ["net", "sync", "time", "rt", "macros", "io-util"] }
tracing = "0.1"
